# ruleco

./: Cargo.toml  README.md
.github/workflows/: ruleco_CI.yml
src/: control_protocol.rs  data_protocol.rs  json.rs  lib.rs  main.rs
src/control_protocol/: communicator.rs
